fix misaligned "x"

--- a/res/css/views/dialogs/_InviteDialog.pcss
+++ b/res/css/views/dialogs/_InviteDialog.pcss
@@ -157,6 +157,7 @@ limitations under the License.
         height: 24px;
         line-height: $font-24px;
         padding-inline: $spacing-8;
+        vertical-align: middle;
         color: #ffffff; /* this is fine without a var because it's for both themes */
 
         .mx_SearchResultAvatar {
@@ -182,6 +183,7 @@ limitations under the License.
     .mx_InviteDialog_userTile_remove {
         display: inline-block;
         margin-inline-start: $spacing-4;
+        vertical-align: middle;
     }
 }
 
